<resources>
    <string name="app_name">ScotlandYard</string>
    <string name="playButton">Play</string>
    <string name="logo">logo</string>
    <string name="wifi">WiFi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="playText">PLAY</string>
    <string name="test">Test</string>
    <string name="_2x_move">2x Move</string>
    <string name="black_ticket">Black Ticket</string>
    <string name="bus">Bus</string>
    <string name="taxi">Taxi</string>
    <string name="u_bahn">U-bahn</string>
    <string name="chat">CHAT</string>
    <string name="cheat">Schummeln</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="mehrspieler">Mehrspieler</string>


</resources>
